# acs37800

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  cspell-acs37800.txt  cspell.json  justfile
.github/workflows/: ci.yml
examples/: raspberry_pi_i2c.rs  rp2350_i2c_async.rs
src/: defaults.rs  eeprom.rs  i2c.rs  lib.rs  spi.rs  test.rs
